feat: atualização das propriedades de configuração

--- a/webscraper/src/main/resources/config.properties
+++ b/webscraper/src/main/resources/config.properties
@@ -1,3 +1,4 @@
-webscraper.url=http://test.com
-webscraper.downloadFolder=~/output/download
-webscraper.zipFolder=~/output/zip
+webscraper.url=https://www.gov.br/ans/pt-br/acesso-a-informacao/participacao-da-sociedade/atualizacao-do-rol-de-procedimentos
+webscraper.arquivos=Anexo I.pdf,Anexo II.pdf
+webscraper.downloadFolder=../output/download
+webscraper.zipFolder=../output/zip
